--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,6 +107,6 @@ add_subdirectory(chapter_15)
 add_subdirectory(chapter_16)
 add_subdirectory(chapter_17)
 add_subdirectory(chapter_18)
-add_subdirectory(chapter_19)
-add_subdirectory(chapter_20)
-add_subdirectory(chapter_21)
+# add_subdirectory(chapter_19)
+# add_subdirectory(chapter_20)
+# add_subdirectory(chapter_21)
